Cria crud de espacos
